--- a/hugo.toml
+++ b/hugo.toml
@@ -3,23 +3,18 @@ languageCode = 'en-us'
 title = 'SkiCon New England'
 theme = "hello-friend-ng"
 
+
+[params]
+    backgroundImage = "img/SkiCon-bg.jpeg"
+
 [[menu.main]]
-    identifier  = "Talks"
-    name        = "Talks"
-    url         = "/talks"
-    weight      = 10
-[[menu.main]]
-    identifier = "FAQ"
-    name       = "FAQ"
-    url        = "/faq"
-    weight      = 20
-[[menu.main]]
-    identifier = "Code_Conduct"
-    name       = "Code Of Conduct"
-    url        = "/coc"
-    weight      = 30
+    identifier = "Conference"
+    name       = "Conference"
+    weight     = 10
+
 [[menu.main]]
     identifier = "Twitter"
     name       = "Twitter"
     url        = "https://x.com/SkiConNE"
-    weight      = 40
+    weight     = 40
+
